feat: add build info
