# docs/swagger.json
@@ -13,7 +13,7 @@
         "version": "v0.2.0"
     },
     "paths": {
-        "/api": {
+        "/": {
             "get": {
                 "description": "checks if server is running",
                 "produces": [
@@ -27,7 +27,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.Success"
+                            "$ref": "#/definitions/http.Success"
                         }
                     }
                 }
@@ -53,7 +53,7 @@
                     "403": {
                         "description": "already authenticated",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     }
                 }
@@ -89,19 +89,19 @@
                     "200": {
                         "description": "authenticated successfully",
                         "schema": {
-                            "$ref": "#/definitions/server.Success"
+                            "$ref": "#/definitions/http.Success"
                         }
                     },
                     "403": {
                         "description": "could not retrieve token",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     },
                     "404": {
                         "description": "could not retrieve current user",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     }
                 }
@@ -127,13 +127,13 @@
                     "401": {
                         "description": "not authenticated",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     },
                     "404": {
                         "description": "no current playing track found",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     }
                 }
@@ -162,19 +162,39 @@
                     "401": {
                         "description": "not authenticated",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     },
                     "404": {
                         "description": "no current playing track found",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
                         }
                     },
                     "500": {
                         "description": "album images could not be processed",
                         "schema": {
-                            "$ref": "#/definitions/server.Error"
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/version": {
+            "get": {
+                "description": "checks the server's version",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "core"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/build.Info"
                         }
                     }
                 }
@@ -182,6 +202,20 @@
         }
     },
     "definitions": {
+        "build.Info": {
+            "type": "object",
+            "properties": {
+                "dirty_build": {
+                    "type": "boolean"
+                },
+                "last_commit": {
+                    "type": "string"
+                },
+                "revision": {
+                    "type": "string"
+                }
+            }
+        },
         "color.RGBA": {
             "type": "object",
             "properties": {
@@ -190,7 +224,7 @@
                 }
             }
         },
-        "server.Error": {
+        "http.Error": {
             "type": "object",
             "properties": {
                 "error": {
@@ -198,7 +232,7 @@
                 }
             }
         },
-        "server.Success": {
+        "http.Success": {
             "type": "object",
             "properties": {
                 "success": {
