# http/handler.go
@@ -24,11 +24,24 @@ type Error struct {
 // @Description checks if server is running
 // @Tags core
 // @Produce json
-// @Success 200 {object} server.Success
-// @Router /api [get]
+// @Success 200 {object} http.Success
+// @Router / [get]
 func (Server) handleHealthCheck() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		c.JSON(http.StatusOK, Success{Success: "i'm alright!"})
+	}
+}
+
+// handleVersion godoc
+// @Summary Health Check
+// @Description checks the server's version
+// @Tags core
+// @Produce json
+// @Success 200 {object} build.Info
+// @Router /api/version [get]
+func (s *Server) handleVersion() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		c.JSON(http.StatusOK, s.build)
 	}
 }
 
@@ -47,8 +60,8 @@ func (s *Server) handleSwagger() gin.HandlerFunc {
 // @Tags spoty
 // @Produce json
 // @Success 200 {object} spotify.FullTrack "returns full track information"
-// @Failure 401 {object} server.Error "not authenticated"
-// @Failure 404 {object} server.Error "no current playing track found"
+// @Failure 401 {object} http.Error "not authenticated"
+// @Failure 404 {object} http.Error "no current playing track found"
 // @Router /api/current [get]
 func (s *Server) handleCurrentTrack(c *gin.Context) {
 	track, err := s.spoty.TrackCurrentlyPlaying()
@@ -67,9 +80,9 @@ func (s *Server) handleCurrentTrack(c *gin.Context) {
 // @Tags spoty
 // @Produce json
 // @Success 200 {array} spoty.Image "returns album images"
-// @Failure 401 {object} server.Error "not authenticated"
-// @Failure 404 {object} server.Error "no current playing track found"
-// @Failure 500 {object} server.Error "album images could not be processed"
+// @Failure 401 {object} http.Error "not authenticated"
+// @Failure 404 {object} http.Error "no current playing track found"
+// @Failure 500 {object} http.Error "album images could not be processed"
 // @Router /api/current/images [get]
 func (s *Server) handleCurrentTrackImages(c *gin.Context) {
 	track, err := s.spoty.TrackCurrentlyPlaying()
@@ -98,7 +111,7 @@ func (s *Server) handleCurrentTrackImages(c *gin.Context) {
 // @Tags spoty
 // @Produce json
 // @Success 302 {string} string "redirection to spotify"
-// @Failure 403 {object} server.Error "already authenticated"
+// @Failure 403 {object} http.Error "already authenticated"
 // @Router /api/authenticate [get]
 func (s *Server) handleAuthenticate(c *gin.Context) {
 	c.Redirect(http.StatusFound, s.spoty.AuthURL())
@@ -111,10 +124,10 @@ func (s *Server) handleAuthenticate(c *gin.Context) {
 // @Produce json
 // @Param code query string true "code from spotify"
 // @Param state query string true "state from spotify"
-// @Success 200 {object} server.Success "authenticated successfully"
-// @Failure 403 {object} server.Error "already authenticated"
-// @Failure 403 {object} server.Error "could not retrieve token"
-// @Failure 404 {object} server.Error "could not retrieve current user"
+// @Success 200 {object} http.Success "authenticated successfully"
+// @Failure 403 {object} http.Error "already authenticated"
+// @Failure 403 {object} http.Error "could not retrieve token"
+// @Failure 404 {object} http.Error "could not retrieve current user"
 // @Router /api/callback [get]
 func (s *Server) handleCallback(c *gin.Context) {
 	if err := s.spoty.SetupNewClient(c.Request); err != nil {
